tests/generics/generic_pair.diag
generic_pair.ax:1:1: error: type mismatch: expected 24, found 3
generic_pair.ax:1:1: error: type mismatch: expected 25, found 12
