tests/generics/generic_pair.ax
struct Pair[A, B]:
    first: A
    second: B

fn make_pair[A, B](a: A, b: B) -> Pair[A, B]:
    return a

fn main():
    let p = make_pair(1, "hello")
